--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint": "wsrun --exclude-missing -e lint",
     "typecheck": "wsrun --exclude-missing typecheck",
     "postinstall": "husky install",
-    "update-changelog": "changelog -o CHANGELOG.md"
+    "update-changelog": "changelog -o CHANGELOG.md",
+    "bump-version": "yarn version --new-version $(changelog version)"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint"
@@ -38,9 +39,6 @@
     "url": "https://github.com/immutable/ts-immutable-sdk/issues"
   },
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
-  "dependencies": {
-    "@changesets/cli": "^2.26.1"
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -50,7 +48,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
-    "wsrun": "^5.2.4"
+    "wsrun": "^5.2.4",
+    "@changesets/cli": "^2.26.1"
   },
   "packageManager": "yarn@3.5.0"
 }
