--- a/packages/economy/package.json
+++ b/packages/economy/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@imtbl/checkout-sdk-web": "file:.yalc/@imtbl/checkout-sdk-web",
+    "@imtbl/checkout-sdk-widgets": "file:.yalc/@imtbl/checkout-sdk-widgets",
     "@swc/helpers": "~0.4.11",
     "core-js": "^3.6.5",
     "regenerator-runtime": "0.13.7",
