--- a/package.json
+++ b/package.json
@@ -48,5 +48,22 @@
     "prettier": "^2.8.7",
     "wsrun": "^5.2.4"
   },
-  "packageManager": "yarn@3.5.0"
+  "packageManager": "yarn@3.5.0",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "@ethersproject/providers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0",
+    "ethers": "^5.7.2",
+    "@imtbl/core-sdk": "^1.0.2-alpha.5",
+    "@magic-ext/oidc": "^1.0.1",
+    "axios": "^1.3.4",
+    "eslint": "^8.34.0",
+    "magic-sdk": "^13.3.1",
+    "oidc-client-ts": "^2.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0"
+  },
+  "peerDependencies": {}
 }
