--- a/packages/checkout/sample-app/package.json
+++ b/packages/checkout/sample-app/package.json
@@ -21,25 +21,24 @@
     ]
   },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
+  },
+  "devDependencies": {
     "@imtbl/checkout-sdk-web": "*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.4.0",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
+    "@typescript-eslint/parser": "^5.56.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3"
   }
 }
