--- a/publish/package.json
+++ b/publish/package.json
@@ -15,7 +15,8 @@
     "build": "yarn packageList && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
     "typecheck": "tsc --noEmit --jsx preserve",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
-    "packageList": "./scripts/generate-package-list.sh"
+    "packageList": "./scripts/generate-package-list.sh",
+    "updateDependencies": "node ./scripts/updateDependencies.js"
   },
   "repository": {
     "type": "git",
@@ -43,5 +44,22 @@
     "rollup-plugin-dts": "^5.3.0",
     "semver": "^7.4.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "@ethersproject/providers": "^5.7.2",
+    "@metamask/detect-provider": "^2.0.0",
+    "ethers": "^5.7.2",
+    "@imtbl/core-sdk": "^1.0.2-alpha.5",
+    "@magic-ext/oidc": "^1.0.1",
+    "axios": "^1.3.4",
+    "eslint": "^8.34.0",
+    "magic-sdk": "^13.3.1",
+    "oidc-client-ts": "^2.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0"
+  },
+  "peerDependencies": {}
 }
