--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "scripts": {
     "build": "wsrun -p @imtbl/sdk -r --stages build",
     "build:all": "wsrun --stages build",
+    "checkMismatchedPackaged": "yarn syncpack list-mismatches",
+    "fixMismatchedPackaged": "yarn syncpack fix-mismatches && yarn syncpack format",
     "lint": "wsrun --exclude-missing -e lint",
     "postinstall": "husky install",
     "test": "wsrun --exclude-missing -e test",
-    "typecheck": "wsrun --exclude-missing typecheck",
-    "checkMismatchedPackaged": "yarn syncpack list-mismatches",
-    "fixMismatchedPackaged": "yarn syncpack fix-mismatches && yarn syncpack format"
+    "typecheck": "wsrun --exclude-missing typecheck"
   },
   "workspaces": [
     "publish",
