--- a/publish/package.json
+++ b/publish/package.json
@@ -37,6 +37,25 @@
     "semver": "^7.4.0",
     "typescript": "^4.9.5"
   },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/base.d.ts",
+      "import": "./dist/base.js"
+    },
+    "./starkex": {
+      "types": "./dist/starkex.d.ts",
+      "import": "./dist/starkex.js"
+    },
+    "./passport": {
+      "types": "./dist/passport.d.ts",
+      "import": "./dist/passport.js"
+    },
+    "./provider": {
+      "types": "./dist/provider.d.ts",
+      "import": "./dist/provider.js"
+    }
+  },
   "engines": {
     "node": ">=14.0.0"
   },
@@ -45,7 +64,7 @@
   ],
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
-  "main": "dist/index.js",
+  "main": "./dist/index.cjs",
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "yarn packageList && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
@@ -55,5 +74,5 @@
     "updateDependencies": "node ./scripts/updateDependencies.js"
   },
   "type": "module",
-  "types": "dist/index.d.ts"
+  "types": "./dist/index.d.ts"
 }
