--- a/packages/checkout/sample-app/package.json
+++ b/packages/checkout/sample-app/package.json
@@ -38,7 +38,6 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
+    "start": "react-scripts start"
   }
 }
