--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "chalk": "^5.2.0",
+    "commander": "^10.0.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
+    "npm-registry-fetch": "^14.0.3",
     "prettier": "^2.8.7",
+    "semver": "^7.4.0",
     "syncpack": "^9.8.4",
     "wsrun": "^5.2.4"
   },
