--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -1,10 +1,10 @@
 name: Changelog Checker
 
 on:
-  push:
+  pull_request:
+    types: [opened, edited, synchronize, reopened]
     branches:
       - main
-  pull_request:
 
 jobs:
   change:
@@ -16,22 +16,27 @@ jobs:
       with:
         fetch-depth: 2
 
-    - name: Check Changelog Updated 
+    - if: ${{ contains(github.event.pull_request.title, 'NO-CHANGELOG') }}
+      name: Add comment about skipping check
+      uses: mshick/add-pr-comment@v2
+      with:
+        message: |
+          Skipping changelog updated check. Detected 'NO-CHANGELOG' in PR title.
+
+    - if: ${{ !contains(github.event.pull_request.title, 'NO-CHANGELOG') }}
+      name: Check Changelog Updated
       id: changelog
       run: |
         echo "CHANGELOG_UPDATED=$(git diff --name-only -r origin/main origin/${GITHUB_HEAD_REF} CHANGELOG.md)" >> $GITHUB_OUTPUT
         
-    - name: Run step only when any of the above files changed. 
-      if: steps.changelog.outputs.CHANGELOG_UPDATED != 'CHANGELOG.md'
+    - if: contains(github.event.pull_request.title, 'NO-CHANGELOG') == false && steps.changelog.outputs.CHANGELOG_UPDATED != 'CHANGELOG.md'
+      name: Run step only when any of the above files changed.
       uses: mshick/add-pr-comment@v2
       with:
         message: |
-          No changelog updated detected, please add a summary of changes to CHANGELOG.md!
+          No changelog updated detected, please add a summary of changes to CHANGELOG.md. For recomended changelog format please see [this guidelines](https://immutable.atlassian.net/wiki/spaces/PPS/pages/2146862207/Changelog+Guidelines+for+Unified+SDK). If no notable changes to be added to changelog, please add `NO-CHANGELOG` to PR title.
 
-    - name: Run step only when any of the above files changed test 
-      if: steps.changelog.outputs.CHANGELOG_UPDATED == 'CHANGELOG.md'
-      uses: mshick/add-pr-comment@v2
-      with:
-        message: |
-          Changelog update detected. Good work!
-          
+    - if: contains(github.event.pull_request.title, 'NO-CHANGELOG') == false && steps.changelog.outputs.CHANGELOG_UPDATED != 'CHANGELOG.md'
+      run: |
+        exit 1
+
