--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "devDependencies": {
+    "@release-it-plugins/workspaces": "^3.2.0",
+    "@release-it/keep-a-changelog": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.37.0",
@@ -13,6 +15,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
+    "release-it": "^15.10.1",
     "syncpack": "^9.8.4",
     "wsrun": "^5.2.4"
   },
@@ -39,7 +42,7 @@
     "typecheck": "wsrun --exclude-missing typecheck"
   },
   "workspaces": [
-    "publish",
+    "sdk",
     "packages/config",
     "packages/starkex",
     "packages/passport",
