--- a/packages/checkout/sdk-sample-app/package.json
+++ b/packages/checkout/sdk-sample-app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
+    "@biom3/react": "^0.3.0-beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0"
@@ -38,7 +39,7 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "test": "react-scripts test --passWithNoTests"
   }
 }
