--- a/sdk/package.json
+++ b/sdk/package.json
@@ -26,6 +26,7 @@
     "@imtbl/provider": "0.0.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-multi-entry": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-typescript": "^11.0.0",
@@ -43,28 +44,29 @@
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "types": "./dist/base.d.ts",
-      "import": "./dist/base.js"
+      "types": "./dist/config.d.ts",
+      "import": "./dist/config.js",
+      "require": "./dist/index.cjs"
     },
     "./immutablex_client": {
       "types": "./dist/immutablex_client.d.ts",
-      "import": "./dist/immutablex_client.js"
+      "import": "./immutablex_client"
     },
     "./passport": {
       "types": "./dist/passport.d.ts",
-      "import": "./dist/passport.js"
+      "import": "./passport"
     },
     "./provider": {
       "types": "./dist/provider.d.ts",
-      "import": "./dist/provider.js"
+      "import": "./provider"
     },
     "./checkout_sdk": {
       "types": "./dist/checkout_sdk.d.ts",
-      "import": "./dist/checkout_sdk.js"
+      "import": "./checkout_sdk"
     },
     "./checkout_widgets": {
       "types": "./dist/checkout_widgets.d.ts",
-      "import": "./dist/checkout_widgets.js"
+      "import": "./checkout_widgets"
     }
   },
   "files": [
@@ -73,13 +75,18 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
-    "build": "yarn packageList && yarn updateDependencies && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
+    "build": "yarn packageList && yarn updateDependencies && yarn regenModules && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
+    "build:only": "rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
+    "generateIndex": "node scripts/generateIndex.js",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "packageList": "./scripts/generate-package-list.sh",
+    "regenModules": "yarn generateIndex && yarn updateExports",
     "typecheck": "tsc --noEmit --jsx preserve",
-    "updateDependencies": "yarn packageList && node ./scripts/updateDependencies.js"
+    "updateDependencies": "yarn packageList && node ./scripts/updateDependencies.js",
+    "updateExports": "node scripts/updateExports.js"
   },
   "type": "module",
   "types": "./dist/index.d.ts"
