--- a/sdk/package.json
+++ b/sdk/package.json
@@ -50,23 +50,23 @@
     },
     "./immutablex_client": {
       "types": "./dist/immutablex_client.d.ts",
-      "import": "./immutablex_client"
+      "import": "./dist/immutablex_client.js"
     },
     "./passport": {
       "types": "./dist/passport.d.ts",
-      "import": "./passport"
+      "import": "./dist/passport.js"
     },
     "./provider": {
       "types": "./dist/provider.d.ts",
-      "import": "./provider"
+      "import": "./dist/provider.js"
     },
     "./checkout_sdk": {
       "types": "./dist/checkout_sdk.d.ts",
-      "import": "./checkout_sdk"
+      "import": "./dist/checkout_sdk.js"
     },
     "./checkout_widgets": {
       "types": "./dist/checkout_widgets.d.ts",
-      "import": "./checkout_widgets"
+      "import": "./dist/checkout_widgets.js"
     }
   },
   "files": [
