--- a/packages/checkout/sdk/package.json
+++ b/packages/checkout/sdk/package.json
@@ -19,6 +19,8 @@
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "parcel": "^2.8.3",
+    "typedoc": "^0.24.6",
+    "typedoc-plugin-markdown": "^3.15.2",
     "typescript": "^4.9.5"
   },
   "homepage": "https://github.com/immutable/imx-checkout-sdk#readme",
@@ -38,7 +40,8 @@
     "test": "jest test",
     "test:coverage": "jest --coverage",
     "test:watch": "jest test --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "docs": "typedoc --plugin typedoc-plugin-markdown --skipErrorChecking --disableSources --out docs src/index.ts"
   },
   "source": "src/index.ts",
   "types": "dist/types.d.ts"
