change the main bundle and code owner for sdk

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
+/sdk @immutable/developer-experience
 /packages/immutablex_client @immutable/developer-experience
 /packages/config @immutable/developer-experience
 /packages/internal/toolkit @immutable/developer-experience
