--- a/sdk/package.json
+++ b/sdk/package.json
@@ -44,8 +44,7 @@
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/config.d.ts",
-      "import": "./dist/config.js",
-      "require": "./dist/index.cjs"
+      "import": "./dist/config.js"
     },
     "./immutablex_client": {
       "types": "./dist/immutablex_client.d.ts",
@@ -74,7 +73,6 @@
   "homepage": "https://github.com/immutable/ts-immutable-sdk#readme",
   "license": "Apache-2.0",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
     "build": "yarn packageList && yarn updateDependencies && yarn regenModules && rm -rf dist && NODE_ENV=production rollup --config rollup.config.js && rm -rf dist/types",
