--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -48,7 +48,7 @@
   },
   "private": true,
   "scripts": {
-    "build": "cp src/build.tsx src/index.tsx && GENERATE_SOURCEMAP=false react-scripts build && yarn dist:sdk",
+    "build": "cp src/build.tsx src/index.tsx && GENERATE_SOURCEMAP=false react-scripts build",
     "build:dist": "yarn build && yarn dist:sample",
     "dist:sample": "mkdir -p ../widgets-sample-app/public/lib/js && cp build/static/js/main.*.js ../widgets-sample-app/public/lib/js/imtbl-checkout.js",
     "dist:sdk": "mkdir -p ../../../sdk/dist/browser && cp build/static/js/main.*.js ../../../sdk/dist/browser/checkout.js",
