--- a/packages/checkout/widgets-types/package.json
+++ b/packages/checkout/widgets-types/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "dependencies": {
     "@imtbl/checkout-sdk-web": "0.0.0",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
