--- a/packages/internal/contracts/package.json
+++ b/packages/internal/contracts/package.json
@@ -5,22 +5,9 @@
   "author": "Immutable",
   "bugs": "https://github.com/immutable/ts-immutable-sdk/issues",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^1.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@typechain/ethers-v6": "^0.4.0",
-    "@typechain/hardhat": "^8.0.0",
-    "@types/chai": "^4.2.0",
-    "@types/mocha": ">=9.1.0",
-    "chai": "^4.2.0",
     "hardhat": "^2.15.0",
-    "hardhat-gas-reporter": "^1.0.8",
     "rollup": "^3.17.2",
-    "solidity-coverage": "^0.8.1",
     "typechain": "^8.2.0"
   },
   "engines": {
@@ -35,9 +22,11 @@
   "private": true,
   "repository": "immutable/ts-immutable-sdk.git",
   "scripts": {
-    "copy:generated:abi": "node ./scripts/copy-generated-abis.js",
     "build": "NODE_ENV=production rollup --config rollup.config.js",
-    "generate-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types './src/abi/*.json'",
+    "copy:generated-abis": "node ./scripts/copy-generated-abis.js",
+    "generate:abis": "hardhat compile",
+    "generate:typechain-types": "typechain --target=ethers-v5 --out-dir=src/typechain/types './src/abi/*.json'",
+    "generate:types": "yarn generate:abis && yarn copy:generated-abis && yarn generate:typechain-types",
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "prepare": "wsrun -r build",
     "typecheck": "tsc --noEmit --jsx preserve"
