--- a/packages/immutablex-client/package.json
+++ b/packages/immutablex-client/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/jest": "^0.2.24",
+    "@types/elliptic": "^6.4.14",
     "@types/jest": "^29.4.3",
     "eslint": "^8.40.0",
     "jest": "^29.4.3",
