--- a/packages/checkout/widgets/package.json
+++ b/packages/checkout/widgets/package.json
@@ -44,7 +44,9 @@
     "lint": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0",
     "lint:fix": "eslint ./src --ext .ts,.jsx,.tsx --max-warnings=0 --fix",
     "start": "parcel watch",
-    "test": "jest test --passWithNoTests"
+    "start:local": "ENVIRONMENT=local && parcel watch",
+    "test": "jest test",
+    "test:watch": "jest test --watch"
   },
   "source": "src/index.ts",
   "types": "dist/index.d.ts"
