--- a/packages/passport/package.json
+++ b/packages/passport/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8.40.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "msw": "^1.2.2",
     "prettier": "^2.8.7",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
