--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,8 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Increase memory limit"
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
+        run: export NODE_OPTIONS="--max_old_space_size=4096"
+
       - name: Check Public Release Branch
         if: contains(github.event.inputs.release_type, 'release') && (github.ref != 'refs/heads/main')
         run: failure("Public releases should be only done from main branch, current branch ${{ github.ref }}")
