--- a/packages/passport/package.json
+++ b/packages/passport/package.json
@@ -32,9 +32,11 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "cross-fetch": "^3.1.6",
     "eslint": "^8.40.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "msw": "^1.2.2",
     "prettier": "^2.8.7",
     "rollup": "^3.17.2",
     "ts-node": "^10.9.1",
